--- a/web/media/css/document.css
+++ b/web/media/css/document.css
@@ -64,6 +64,14 @@ input[type="text"], input[type="search"], input[type="tel"], input[type="url"], 
     line-height:13px;
 }
 
+::-webkit-input-placeholder {
+    color: #999!important;
+}
+
+:-moz-placeholder {
+    color: #999!important;
+}
+
 /* 1.2 Headers */
 h1 {
     font-size:2em;
