--- a/web/media/css/document.css
+++ b/web/media/css/document.css
@@ -712,7 +712,7 @@ span.font_size_10 {
     font-weight:lighter;*/
 }
 
-/* 3.2 Workspace Toolbar, Paginador, Opciones */
+/* 3.2 Workspace Toolbar, Filtro, Paginador, Opciones */
 .workspaceToolbar {
     display:block;
     padding:10px;
@@ -723,8 +723,47 @@ span.font_size_10 {
     border-color:#D2D2D2;
 }
 
+.btnsFiltro {
+    display: inline-block;
+}
+.btnsFiltro div {
+    float: left;
+    line-height: 27px;
+    height: 27px;
+    padding: 0 12px;
+    background-color: #f5f5f5;
+    border-width: 1px 1px 1px 0px;
+    border-color: #b5b5b5;
+    border-style: solid;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.btnsFiltro div.first {
+    border-left-width: 1px;
+    border-radius: 3px 0px 0px 3px;
+}
+
+.btnsFiltro div.last {
+    border-radius: 0px 3px 3px 0px;
+}
+
+.btnsFiltro div.selected {
+    background-color: #DDD;
+    /*css3*/
+    -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.btnsFiltro div:hover {
+    color: #000;
+    /*css3*/
+    -webkit-box-shadow: inset 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
+}
 .paginas {
-    text-align:right;
+    float: right;
+    text-align: right;
 }
 
 .paginas a {
@@ -1082,7 +1121,7 @@ dl.horizontal dt {
 
 /* 3.3.7.1 Detalle de contacto */
 .contactInfo dt {
-    width:90px;
+    width:100px;
     text-align:right;
     font-size:14px;
     color:#6C6C6C;
@@ -1091,7 +1130,7 @@ dl.horizontal dt {
 
 .contactInfo dd {
     display:block;
-    padding-left:100px;
+    padding-left:110px;
     margin-bottom:20px;
     line-height:1.3em;
 }
