--- a/web/media/css/document.css
+++ b/web/media/css/document.css
@@ -117,11 +117,11 @@ h5 {
 }
 
 /* 1.3 Format */
-span.negrita {
+span.negrita, a.negrita {
     font-weight:bold;
 }
 
-span.rojo {
+span.rojo, a.rojo {
     color:#DD4B39;
 }
 
