--- a/web/media/css/form.css
+++ b/web/media/css/form.css
@@ -141,10 +141,13 @@ select.ancho465es {
 }
 
 /* Formulario de Contacto */
+.frmContacto input, .frmContacto select, .frmContacto textarea, .frmContacto input[type="file"], .frmContacto dt {
+    font-size: 1.1em; /* <= Preparando para mobile (eq 14px) */
+}
+
 .frmContacto input {
     height:18px;
     line-height:18px;
-    font-size:14px;
 }
 
 .frmContacto .bigText {
@@ -164,20 +167,14 @@ select.ancho465es {
     line-height: 1.4em;
 }
 
-.frmContacto select, .frmContacto textarea {
-    font-size:14px;
-}
-
 .frmContacto input[type="file"] {
     height: auto;
-    font-size: 14px;
     line-height: 1em;
 }
 
 .frmContacto dt {
     width:128px;
     text-align:left;
-    font-size:14px;
     color:#6C6C6C;
     line-height:1.3em;
 }
@@ -216,11 +213,13 @@ select.ancho465es {
 .frmProyecto input {
     height:18px;
     line-height:18px;
-    font-size:14px;
+    /*font-size:14px;*/
+    font-size: 1.1em; /* <= Preparando para mobile (eq 14px) */
 }
 
 .frmProyecto select, .frmProyecto textarea {
-    font-size:14px;
+    /*font-size:14px;*/
+    font-size: 1.1em; /* <= Preparando para mobile (eq 14px) */
 }
 
 .frmProyecto textarea {
@@ -229,7 +228,8 @@ select.ancho465es {
 }
 
 .frmProyecto .fecha, .frmProyecto dt, .frmProyecto .contactosInvolucrados p {
-    font-size:14px;
+    /*font-size:14px;*/
+    font-size: 1.1em; /* <= Preparando para mobile (eq 14px) */
     color:#6C6C6C;
     line-height:1.3em;
 }
