Se añadio funcionalidad a la sección de usuarios

--- a/web/media/css/document.css
+++ b/web/media/css/document.css
@@ -1104,10 +1104,9 @@ dl.horizontal dt {
     margin-right: 10px;
 }
 
-#users .perfiles img {
-    display: none;
+#users .perfiles .icono-cancelar {
+    cursor: pointer;
 }
-
 /* 3.3.6.3 Lista de tareas */
 .task {
     padding-left:60px;
