Se crearon las secciones para editar info de perfil y modificar contreseña. Se agrego codificación md5 al login Se modifó la estructura de las secciones para editar la info del contacto, incluyendo las fotos.

--- a/web/media/css/form.css
+++ b/web/media/css/form.css
@@ -225,6 +225,15 @@ select.ancho465es {
     line-height:1.3em;
 }
 
+.frmPerfil input, .frmPerfil select, .frmPerfil dt {
+    font-size: 1.1em; /* <= Preparando para mobile (eq 14px) */
+}
+
+.frmPerfil input {
+    height:18px;
+    line-height:18px;
+}
+
 /* Formulario Proyecto */
 .frmProyecto input, .frmProyecto select, .frmProyecto textarea {
     /*font-size:14px;*/
